package src.main.java;

option java_package = "cn.lida.netty.protocol";
option java_outer_classname = "CatPortoBuf";
option optimize_for = LITE_RUNTIME;

//命令
enum Command{
     //ping
     CMD_PING = 1 ;
     //test
     CMD_TEST = 2;
     //加入聊天室
     CMD_JOIN_CAT_ROOM = 100;
     //发送私人消息
     CMD_SEND_PRIVATE_MESSAGE = 101 ;
     //发送群组消息
     CMD_SEND_GROUP_MESSAGE = 102 ;
}

message  TestRequest{
    required Command command = 1;
    required string content = 2 ;//发送内容

}

message TestResponse{
    required Command command = 1;
    required string content = 2 ;//发送内容
}

//用户信息
message UserInfo{
    required int64 userId = 1 ;//用户编号
    required string userName = 2 ;//用户名称
    required int32 groupId = 3 ;//群组编号
}

//加入聊天室request
message JoinCatRoomRequest{
    required int64 userId = 1 ;//用户编号
    optional string userName = 2 ;//用户名称
}

//加入聊天室response
message JoinCatRoomResponse{
    repeated UserInfo users = 1;
}


//发送私聊消息request
message SendPrivateMessageRequest{
    required int64 userId = 1 ;//用户编号
    required string message = 2 ;//消息
}

//发送群组消息request
message SendGroupMessageRequest{
    required int64 groupId = 1 ;//群组编号
    required string message = 2 ;//消息
}

//ping request
message PingRequest{
    required Command command = 1;
}
//ping response
message PingResponse{
	required Command command = 1;
}





